appId: host.exp.Exponent
---
- launchApp

- tapOn:
    text: "Discover"

- tapOn:
    id: "discover-filter-button"

- assertVisible:
    text: "Filter"

- tapOn:
    text: "Floral"

- tapOn:
    text: "Show Results"

- assertVisible:
    text: "FILTERED RESULTS"
